[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for ShuiyuanAutoReply"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "dashscope>=1.25.0",
    "docker>=7.1.0",
    "isort>=8.0.1",
    "mcp[cli]>=1.25.0",
    "python-dotenv>=1.2.1",
]
